--- a/contribs/protobuf/pom.xml
+++ b/contribs/protobuf/pom.xml
@@ -220,6 +220,11 @@
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.7</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.google.protobuf</groupId>-->
             <!--<artifactId>protoc</artifactId>-->
